# sphragis

./: .kanon-ci.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISION.md  README.md  clippy.toml  deny.toml  llms.txt  osv-scanner.toml  release-please-config.json  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  gate-attestation.yml  release-please.yml  security.yml
src/: envelope.rs  error.rs  hybrid.rs  lib.rs  seal.rs
tests/: inert_default.rs  known_answer_vectors.rs
